// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CQRS - projection Tests should find #1 by All 1`] = `
Array [
  Object {
    "id": "1000",
    "value": 1,
  },
  Object {
    "id": "2000",
    "value": 2,
  },
]
`;

exports[`CQRS - projection Tests should find #2 by where 1`] = `
Array [
  Object {
    "id": "2000",
    "value": 2,
  },
]
`;

exports[`CQRS - projection Tests should find #3 by contain 1`] = `
Array [
  Object {
    "id": "91000",
    "value": 1,
  },
]
`;

exports[`CQRS - projection Tests should upsert 1`] = `
Object {
  "91000": Object {},
}
`;

exports[`CQRS - projection Tests should upsert many 1`] = `
Object {
  "1000": Object {},
  "2000": Object {},
}
`;
